trunk/Archive2/eb/bf271a581c381f/output
main.cpp: In function 'int main()':
main.cpp:25:16: error: invalid conversion from 'T*' to 'B*' [-fpermissive]
     b = t.clone(       );
                ^
